if applied, fixes spacing for case details header

--- a/src/scss/components/_case_details_header.scss
+++ b/src/scss/components/_case_details_header.scss
@@ -1,7 +1,10 @@
 // Case details header
 .mcc-case-details-header {
-  margin-top: 50px;
+  margin-top: 20px;
+  padding-right: 0px;
+  padding-left: 0px;
 }
+
 
 .moj-button-menu__wrapper {
   margin-top: -5px !important;
